# spacetimeBounds

./: .gitignore  README.md  bullet_lib.sh  run_model.py  train.py  vis_mocap.py  vis_model.py
Kinematic/: CMakeLists.txt  KinematicCore.cpp  KinematicCore.h  KinematicCore.i  KinematicCore.py
Kinematic/unittest/: CMakeLists.txt  atlas_one_joint_pos.txt  atlas_one_link_pos.txt  atlas_rest_joint_pos.txt  atlas_rest_link_pos.txt  humanoid3d_pos_zero.txt  humanoid3d_zero_pose.txt  unittest_atlas.cpp  unittest_bodytools.cpp  unittest_charparser.cpp  unittest_charpose.cpp  unittest_convhull.cpp  unittest_descriptor.cpp
Kinematic/utils/: ButterworthFilter.cpp  CharParser.cpp  CharParser.h  CharPose.cpp  CharPose.h  Descriptor.cpp  Descriptor.h
algorithm/: PPO_vec.py  __init__.py  data_tools.py  runner.py  sample_pool.py  select_pool.py
args/: demo_ablation_cartwheel_03.json  demo_ablation_cartwheel_07.json  demo_ablation_cartwheel_14.json  demo_ablation_walk_03.json  demo_ablation_walk_07.json  demo_ablation_walk_14.json  demo_energy_down_cartwheel.json  demo_energy_down_dance_a.json  demo_energy_down_run.json  demo_energy_up_cartwheel.json  demo_energy_up_dance_a.json  demo_energy_up_run.json  demo_spacetime_atlas_run.json  demo_spacetime_atlas_spinkick.json  demo_spacetime_atlas_walk.json  demo_spacetime_backflip.json  demo_spacetime_backward_jog.json  demo_spacetime_break_dance.json  demo_spacetime_bridge.json  demo_spacetime_cartwheel.json  demo_spacetime_crawl.json  demo_spacetime_dance_a.json  demo_spacetime_indian_dance.json  demo_spacetime_jump.json  demo_spacetime_leg_liftting_jog.json  demo_spacetime_mickey_surprised.json  demo_spacetime_roll.json  demo_spacetime_run.json  demo_spacetime_run_jump.json  demo_spacetime_walk.json  demo_transfer_bent_run.json  demo_transfer_happy_run.json  demo_volume_down_cartwheel.json  demo_volume_down_walk.json  demo_volume_up_cartwheel.json  demo_volume_up_walk.json  spacetime_atlas_walk.json  spacetime_bridge.json  spacetime_cartwheel.json  spacetime_mickey_surprised.txt  (+33 more)
batch_script/: train_style_energy.sh  train_style_volume.sh
data/bounds/: atlas_relaxed_joints.txt  atlas_run.txt  atlas_tight_bound.txt  default.txt  no_arm_hip.txt  readme.md  style_cartwheel.txt  style_dance_a.txt  style_run.txt  style_walk.txt  uniform_03.txt  uniform_07.txt  uniform_14.txt
data/characters/: atlas.txt  humanoid3d_cmu.txt
data/contacts/: atlas_walk.txt
data/controllers/: atlas_ctrl.txt  humanoid3d_cmu_ctrl.txt
data/motions/: atlas_run.txt  atlas_spinkick.txt  atlas_walk.txt  humanoid3d_backward_jog.txt  humanoid3d_bent_walk.txt  humanoid3d_bridge.txt  humanoid3d_dance1.txt  humanoid3d_happy_walk.txt  humanoid3d_indiandance5.txt  humanoid3d_leg_lifting_jog.txt  humanoid3d_mickey_surprised.txt  humanoid3d_run_jump.txt  humanoid3d_walk.txt
data/urdf/atlas/: atlas.urdf
data/urdf/humanoid/: humanoid.urdf
env/: __init__.py  base.py  imitation.py  spacetime.py  spacetime_reg.py  style_energy.py  style_gram.py  style_volume.py  subproc_vec_env.py  vec_env.py
model/: __init__.py  model.py  model_FDM.py  motion_decoder.py  motion_decoder.tar  motion_encoder.py  motion_encoder.tar
sim/: __init__.py  sim_engine.py  sim_pybullet.py
utils/: bullet_client.py  export_feature.py  humanoid_kin.py  humanoid_mocap.py  humanoid_vis.py  motion_bound.py  quaternion.py  timer.py
